--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -4,110 +4,108 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EB6A6A">
+    android:background="#FFFFFF">
 
-
-    <TextView
-        android:id="@+id/userinfo_layout_text_nickName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/textView_emainJoin"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:background="@drawable/join_edittext_border"
         android:ems="15"
-        android:gravity="center"
-        android:hint="@string/editText_email_Text"
+        android:gravity="left"
+        android:hint="이메일을 입력하세요."
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_age"
+        android:paddingLeft="12dp"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline11" />
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="32dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="40dp" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_age"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:background="@drawable/join_edittext_border"
         android:ems="15"
-        android:gravity="center"
-        android:hint="@string/editText_password_Text"
+        android:gravity="left"
+        android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/guideline8"
+        android:paddingLeft="12dp"
         app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_name"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="32dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.481" />
 
     <Button
         android:id="@+id/userinfo_layout_Button_infoOk_button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#B34141"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="#EB6A6A"
         android:text="@string/join_text"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     <!--Guideline start-->
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="192dp" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline8"
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="383dp" />
+        android:layout_height="35dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        android:elevation="1dp"
+        android:text="중복 확인"
+        app:layout_constraintBottom_toBottomOf="@+id/userinfo_layout_text_name"
+        app:layout_constraintRight_toRightOf="@+id/userinfo_layout_text_name"
+        app:layout_constraintTop_toTopOf="@+id/userinfo_layout_text_name" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline9"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="33dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="284dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="546dp" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:text="10~20자 이내 영문/숫자 조합(대소문자 구분)"
+        android:textSize="11sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/editText"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_nickName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline9"
-        app:srcCompat="@drawable/login_layout_logo_img" />
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="321dp"
+        android:layout_height="39dp"
+        android:background="@drawable/join_edittext_border"
+        android:ems="10"
+        android:hint="비밀번호 확인"
+        android:inputType="textPassword"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_age"
+        app:layout_constraintHorizontal_bias="0.521" />
 
     <!--GuideEnd-->
 
