--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,113 +4,183 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EB6A6A">
+    android:background="#FFFFFF">
 
     <!--start GuideLine-->
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="192dp" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="227dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="74dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="383dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="447dp" />
     <!--end GuideLine-->
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="24dp"
+        android:background="#221814"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:srcCompat="@drawable/login_layout_logo_img" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/login_layout_editText_email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/join_edittext_border"
         android:ems="10"
-        android:hint="@string/editText_email_Text"
+        android:hint="아이디를 입력하세요."
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/login_layout_editText_password"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp" />
 
     <EditText
         android:id="@+id/login_layout_editText_password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/join_edittext_border"
         android:ems="10"
-        android:hint="@string/editText_password_Text"
+        android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/login_layout_editText_email"
+        app:layout_constraintRight_toRightOf="@+id/login_layout_editText_email"
         app:layout_constraintTop_toBottomOf="@+id/login_layout_editText_email" />
 
     <Button
         android:id="@+id/login_layout_loginOk_button"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#B34141"
-        android:text="@string/button_LoginOkButton_Text"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/mtm_button"
+        android:text="로그인"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
-
-    <Button
-        android:id="@+id/login_layout_join_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#B34141"
-        android:text="@string/button_JoinButton_Text"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/login_layout_googleLogin_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/login_layout_googleLogin_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/common_google_signin_btn_text_light_focused"
+        android:text="@string/textView_GoogleLogin_Text"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp" />
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#B34141"
-        android:text="@string/textView_GoogleLogin_Text"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/login_layout_join_button"
-        app:layout_constraintTop_toTopOf="@+id/login_layout_join_button" />
+        android:text="터치 한 번으로 간편 로그인!"
+        android:textSize="10sp"
+        tools:layout_editor_absoluteY="24dp"
+        tools:layout_editor_absoluteX="149dp" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="맘투맘 ID로 로그인"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/login_layout_join_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="회원가입"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/divider2"
+        app:layout_constraintTop_toTopOf="@+id/divider2"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/divider2"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <View
+        android:id="@+id/divider1"
+        android:layout_height="15dp"
+        android:layout_width="1dp"
+        android:background="#000000"
+        app:layout_constraintRight_toLeftOf="@+id/textView6"
+        app:layout_constraintLeft_toRightOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        android:layout_marginBottom="0dp" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_height="15dp"
+        android:layout_width="1dp"
+        android:background="#000000"
+        app:layout_constraintRight_toLeftOf="@+id/login_layout_join_button"
+        app:layout_constraintLeft_toRightOf="@+id/textView6"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintTop_toTopOf="@+id/textView6"
+        android:layout_marginTop="0dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:text="아이디 찾기"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/divider1"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_editText_password" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
+        android:text="비밀번호 찾기"
+        app:layout_constraintBottom_toBottomOf="@+id/divider1"
+        app:layout_constraintLeft_toRightOf="@+id/divider1"
+        app:layout_constraintRight_toLeftOf="@+id/divider2"
+        app:layout_constraintTop_toTopOf="@+id/divider1" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="8dp"
+        android:background="#375D96"
+        android:text="페이스북으로 로그인"
+        android:textColor="#ffffff"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_googleLogin_button" />
 
 </android.support.constraint.ConstraintLayout>
