--- a/app/src/main/res/layout/activity_selelct.xml
+++ b/app/src/main/res/layout/activity_selelct.xml
@@ -7,40 +7,7 @@
     android:background="#EB6A6A">
 
     <!--start GuideLine-->
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="192dp" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="227dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="74dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="407dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="479dp" />
     <!--end GuideLine-->
 
 
@@ -48,11 +15,15 @@
         android:id="@+id/select_layout_logo_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:srcCompat="@drawable/login_layout_logo_img" />
+        app:srcCompat="@drawable/login_layout_logo_img"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
         android:id="@+id/select_layout_findFeedingRoom_imgButton"
@@ -61,8 +32,9 @@
         android:background="#EB6A6A"
         app:layout_constraintEnd_toStartOf="@+id/select_layout_guide_imgButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:srcCompat="@drawable/select_layout_baby_bottle_img" />
+        app:srcCompat="@drawable/select_layout_baby_bottle_img"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="252dp" />
 
     <ImageButton
         android:id="@+id/select_layout_guide_imgButton"
@@ -71,32 +43,36 @@
         android:background="#EB6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/select_layout_findFeedingRoom_imgButton"
-        app:layout_constraintTop_toTopOf="@+id/select_layout_findFeedingRoom_imgButton"
-        app:srcCompat="@drawable/select_layout_guide_book_img" />
+        app:srcCompat="@drawable/select_layout_guide_book_img"
+        tools:layout_editor_absoluteX="209dp"
+        tools:layout_editor_absoluteY="252dp" />
 
     <Button
         android:id="@+id/select_layout_myInfo_button"
-        android:layout_width="wrap_content"
+        android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:text="@string/myInfo_go_text"
         android:background="#B34141"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+        tools:layout_editor_absoluteY="406dp"
+        tools:layout_editor_absoluteX="136dp" />
 
     <TextView
         android:id="@+id/select_layout_textView_find_feeding_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/find_feedingRoom_text"
+        android:layout_marginTop="8dp"
+        android:text="수유실 찾기"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.635"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_layout_findFeedingRoom_imgButton" />
+        app:layout_constraintTop_toBottomOf="@+id/select_layout_findFeedingRoom_imgButton"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/select_layout_findFeedingRoom_imgButton"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/select_layout_findFeedingRoom_imgButton"
+        app:layout_constraintHorizontal_bias="0.737" />
 
     <TextView
         android:id="@+id/select_layout_textView_find_guide"
@@ -104,9 +80,13 @@
         android:layout_height="wrap_content"
         android:text="@string/find_guideBook_text"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/select_layout_guide_imgButton"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/select_layout_guide_imgButton"
+        app:layout_constraintHorizontal_bias="0.238"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/select_layout_guide_imgButton" />
 
     <Button
