--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -8,120 +8,97 @@
     tools:layout_editor_absoluteY="81dp">
 
 
-    <ImageView
-        android:id="@+id/userinfo_layout_userPhoto_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_nickName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline9"
-        app:srcCompat="@drawable/login_layout_logo_img" />
-
-
     <EditText
         android:id="@+id/userinfo_layout_text_nickName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:hint="@string/userNickName"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="13dp"
+        android:hint="닉네임"
         android:inputType="text"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_userPhoto_add" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 
     <TextView
         android:id="@+id/userinfo_layout_basicInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/basicInfo"
+        android:text="기본 정보"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        tools:layout_editor_absoluteY="230dp" />
+        tools:layout_editor_absoluteX="90dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_nickName" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:gravity="left"
-        android:hint="@string/essentialName"
+        android:hint="이름(필수)"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_age"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline11" />
+        tools:layout_editor_absoluteY="274dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_basicInfo" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="-4dp"
+        android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:gravity="left"
-        android:hint="@string/essentialAge"
+        android:hint="나이(선택)"
         android:inputType="text"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_name"
+        app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_text_name"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
+        android:layout_marginTop="7dp"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name" />
 
     <Button
         android:id="@+id/userinfo_layout_Button_infoOk_button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="40dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="#EB6A6A"
         android:text="@string/basicInfoOk"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="32dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_age" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/ic_menu_camera"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="59dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <!--Guideline start-->
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="192dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="383dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="33dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="284dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="546dp" />
 
     <!--GuideEnd-->
 
