String values로 뺌,임시 액션바 색상변경

--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,26 +6,23 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-
     <EditText
         android:id="@+id/userinfo_layout_text_name"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:background="@drawable/join_edittext_border"
         android:ems="15"
-        android:gravity="left"
-        android:hint="이메일을 입력하세요."
+        android:hint="@string/email_input_text"
         android:inputType="textEmailAddress"
-        android:paddingLeft="12dp"
         android:singleLine="true"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="32dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="40dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_age"
@@ -33,17 +30,15 @@
         android:layout_height="40dp"
         android:background="@drawable/join_edittext_border"
         android:ems="15"
-        android:gravity="left"
-        android:hint="비밀번호를 입력하세요."
+        android:hint="@string/password_input_text"
         android:inputType="textPassword"
-        android:paddingLeft="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginLeft="32dp"
         app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_name"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name"
-        android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="32dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.481" />
 
@@ -56,26 +51,20 @@
         android:background="#EB6A6A"
         android:text="@string/join_text"
         android:textColor="#FFFFFF"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-
-    <!--Guideline start-->
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
-        android:elevation="1dp"
-        android:text="중복 확인"
+        android:text="@string/duplication_button_text"
         app:layout_constraintBottom_toBottomOf="@+id/userinfo_layout_text_name"
         app:layout_constraintRight_toRightOf="@+id/userinfo_layout_text_name"
         app:layout_constraintTop_toTopOf="@+id/userinfo_layout_text_name" />
@@ -84,12 +73,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10~20자 이내 영문/숫자 조합(대소문자 구분)"
+        android:text="@string/validation_info_text"
         android:textSize="11sp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintLeft_toLeftOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        tools:ignore="SmallSp" />
 
     <EditText
         android:id="@+id/editText"
@@ -97,17 +87,15 @@
         android:layout_height="39dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
-        android:hint="비밀번호 확인"
+        android:hint="@string/password_input_ok_text"
         android:inputType="textPassword"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_age"
         app:layout_constraintHorizontal_bias="0.521" />
-
-    <!--GuideEnd-->
 
 
 </android.support.constraint.ConstraintLayout>
