--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/titleColor</item>
         <item name="colorPrimaryDark">#EB6A6A</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/titleColor</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
