--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -12,13 +12,13 @@
         android:id="@+id/userinfo_layout_text_nickName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="13dp"
         android:hint="@string/userNickName"
         android:inputType="text"
         android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_basicInfo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,71 +29,79 @@
         android:id="@+id/userinfo_layout_basicInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:text="@string/basicInfo"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_name"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        tools:layout_editor_absoluteX="90dp"
-        android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_nickName" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="13dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/essentialName"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_age"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_basicInfo"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="274dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_basicInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_basicInfo" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="-4dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/essentialAge"
         android:inputType="text"
         android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_Button_infoOk_button"
         app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_name"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_text_name"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        android:layout_marginTop="7dp"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name" />
 
     <Button
         android:id="@+id/userinfo_layout_Button_infoOk_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="51dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
         android:background="#EB6A6A"
         android:text="@string/basicInfoOk"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="32dp"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="32dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="50dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_age" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/ic_menu_camera"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="59dp"
-        android:layout_marginLeft="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_nickName"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_menu_camera" />
 
 
 </android.support.constraint.ConstraintLayout>
