--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,97 +4,97 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    tools:layout_editor_absoluteY="25dp">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/login_layout_layout_my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageView
+            android:id="@+id/login_layout_header_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/momtomom_toolbar_logo" />
+    </android.support.v7.widget.Toolbar>
 
     <View
         android:id="@+id/view"
-        android:layout_width="0dp"
+        android:layout_width="384dp"
         android:layout_height="1dp"
-        android:layout_marginBottom="31dp"
-        android:layout_marginTop="24dp"
         android:background="#221814"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        tools:layout_editor_absoluteY="191dp" />
 
     <EditText
         android:id="@+id/login_layout_editText_email"
-        android:layout_width="0dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/email_input_text"
         android:inputType="textEmailAddress"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/login_layout_editText_password"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp" />
+        tools:layout_editor_absoluteX="32dp" />
 
     <EditText
         android:id="@+id/login_layout_editText_password"
-        android:layout_width="0dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/password_input_text"
         android:inputType="textPassword"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/login_layout_editText_email"
-        app:layout_constraintRight_toRightOf="@+id/login_layout_editText_email"
-        app:layout_constraintTop_toBottomOf="@+id/login_layout_editText_email" />
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_editText_email"
+        tools:layout_editor_absoluteX="32dp" />
 
     <Button
         android:id="@+id/login_layout_loginOk_button"
-        android:layout_width="0dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="33dp"
         android:background="@drawable/mtm_button"
         android:text="@string/button_LoginOkButton_Text"
         android:textColor="#FFFFFF"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_join_button" />
 
     <Button
         android:id="@+id/login_layout_googleLogin_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/common_google_signin_btn_text_light_focused"
         android:text="@string/textView_GoogleLogin_Text"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_layout_my_toolbar" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="1dp"
         android:text="@string/login_layout_login_info"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/login_layout_googleLogin_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_layout_my_toolbar"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="SmallSp" />
 
     <TextView
@@ -102,86 +102,72 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_mtoLogin_Text"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        android:layout_marginTop="32dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintBottom_toTopOf="@+id/login_layout_editText_email"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        tools:layout_editor_absoluteX="124dp" />
 
     <TextView
         android:id="@+id/login_layout_join_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_JoinButton_Text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/divider2"
-        app:layout_constraintTop_toTopOf="@+id/divider2"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/divider2"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
+        tools:layout_editor_absoluteY="370dp" />
 
     <View
         android:id="@+id/divider1"
-        android:layout_height="15dp"
         android:layout_width="1dp"
+        android:layout_height="15dp"
         android:background="#000000"
-        app:layout_constraintRight_toLeftOf="@+id/textView6"
-        app:layout_constraintLeft_toRightOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        android:layout_marginBottom="0dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        tools:layout_editor_absoluteY="370dp" />
 
     <View
         android:id="@+id/divider2"
-        android:layout_height="15dp"
         android:layout_width="1dp"
+        android:layout_height="15dp"
         android:background="#000000"
-        app:layout_constraintRight_toLeftOf="@+id/login_layout_join_button"
-        app:layout_constraintLeft_toRightOf="@+id/textView6"
-        app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintTop_toTopOf="@+id/textView6"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintEnd_toStartOf="@+id/login_layout_join_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        tools:layout_editor_absoluteY="370dp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
         android:text="@string/id_search_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/divider1"
-        app:layout_constraintTop_toBottomOf="@+id/login_layout_editText_password" />
+        app:layout_constraintEnd_toStartOf="@+id/divider1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="368dp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="0dp"
         android:text="@string/password_search_text"
-        app:layout_constraintBottom_toBottomOf="@+id/divider1"
-        app:layout_constraintLeft_toRightOf="@+id/divider1"
-        app:layout_constraintRight_toLeftOf="@+id/divider2"
-        app:layout_constraintTop_toTopOf="@+id/divider1" />
+        app:layout_constraintEnd_toStartOf="@+id/divider2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/divider1"
+        tools:layout_editor_absoluteY="368dp" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="0dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:background="#375D96"
         android:text="@string/textView_FaceBookLogin_Text"
         android:textColor="#ffffff"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_layout_googleLogin_button" />
 
 </android.support.constraint.ConstraintLayout>
