--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -7,6 +7,28 @@
     android:background="#FFFFFF"
     tools:layout_editor_absoluteY="81dp">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/userinfo_layout_layout_my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageView
+            android:id="@+id/userinfo_layout_header_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/momtomom_toolbar_logo" />
+    </android.support.v7.widget.Toolbar>
+
 
     <EditText
         android:id="@+id/userinfo_layout_text_nickName"
@@ -95,12 +117,12 @@
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="59dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_nickName"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_layout_my_toolbar"
         app:srcCompat="@drawable/ic_menu_camera" />
 
 
