--- a/app/src/main/res/layout/activity_add_beneficiary.xml
+++ b/app/src/main/res/layout/activity_add_beneficiary.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -23,5 +24,17 @@
             android:layout_gravity="center"
             android:src="@drawable/momtomom_toolbar_logo" />
     </android.support.v7.widget.Toolbar>
+
+    <TextView
+        android:id="@+id/add_beneficiary_layout_textView_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/titleTextColor1"
+        android:gravity="center"
+        android:text="수혜자 신청"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="57dp" />
 
 </android.support.constraint.ConstraintLayout>
