--- a/app/src/main/res/layout/activity_add_donor.xml
+++ b/app/src/main/res/layout/activity_add_donor.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,6 +26,18 @@
             android:src="@drawable/momtomom_toolbar_logo" />
     </android.support.v7.widget.Toolbar>
 
+    <TextView
+        android:id="@+id/add_beneficiary_layout_textView_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/titleTextColor1"
+        android:gravity="center"
+        android:text="기증자 신청"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="57dp" />
+
 
     <TextView
         android:id="@+id/addDonor_layout_textView_title"
@@ -37,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_donor_layout_layout_my_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/add_beneficiary_layout_textView_title" />
 
     <EditText
         android:id="@+id/addDonor_layout_editText_name"
