--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,12 +6,49 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/emailJoin_layout_layout_my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageView
+            android:id="@+id/emailJoin_layout_header_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/momtomom_toolbar_logo" />
+    </android.support.v7.widget.Toolbar>
+
+
+    <TextView
+        android:id="@+id/feedingRoom_textView_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/titleTextColor1"
+        android:gravity="center"
+        android:text="@string/emailJoin_title_text"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailJoin_layout_layout_my_toolbar" />
+
+
     <EditText
         android:id="@+id/emailJoin_layout_text_name"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginEnd="45dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/join_edittext_border"
         android:ems="15"
         android:hint="@string/email_input_text"
@@ -20,7 +57,7 @@
         app:layout_constraintBottom_toTopOf="@+id/emailJoin_layout_editText_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/feedingRoom_textView_title" />
 
     <EditText
         android:id="@+id/emailJoin_layout_editText_password"
@@ -52,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailJoin_layout_editText_password" />
 
-w
+
     <Button
         android:id="@+id/emailJoin_layout_Button_infoOk_button"
         android:layout_width="0dp"
