진학 레이아웃 수정

--- a/app/src/main/res/layout/activity_add_beneficiary.xml
+++ b/app/src/main/res/layout/activity_add_beneficiary.xml
@@ -34,7 +34,8 @@
         android:text="수혜자 신청"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="57dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_beneficiary_layout_layout_my_toolbar" />
 
 </android.support.constraint.ConstraintLayout>
