--- a/app/src/main/res/layout/activity_add_donor.xml
+++ b/app/src/main/res/layout/activity_add_donor.xml
@@ -30,13 +30,16 @@
         android:id="@+id/add_beneficiary_layout_textView_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
         android:background="@color/titleTextColor1"
         android:gravity="center"
         android:text="기증자 신청"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="57dp" />
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_textView_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_donor_layout_layout_my_toolbar" />
 
 
     <TextView
