--- a/app/src/main/res/layout/activity_feeding_room.xml
+++ b/app/src/main/res/layout/activity_feeding_room.xml
@@ -58,13 +58,16 @@
         android:id="@+id/feedingRoom_layout_Button_roadSearch_Button"
         android:layout_width="80dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="62dp"
+        android:layout_marginTop="17dp"
         android:background="@drawable/feeding_room_button"
-        android:textColor="#FFFFFF"
         android:text="@string/Road_Search_Button_text"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/login_layout_view2"
         app:layout_constraintEnd_toStartOf="@+id/feedingRoom_layout_Button_donorAdd_Button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="162dp" />
+        app:layout_constraintTop_toBottomOf="@+id/feedingRoom_layout_textView_feedingRoomName" />
 
 
     <Button
